@@ -12,6 +12,7 @@ import com.badlogic.gdx.graphics.g3d.Environment;
 import com.badlogic.gdx.graphics.g3d.Model;
 import com.badlogic.gdx.graphics.g3d.ModelBatch;
 import com.badlogic.gdx.graphics.g3d.attributes.BlendingAttribute;
+import com.badlogic.gdx.graphics.g3d.attributes.FloatAttribute;
 import com.badlogic.gdx.graphics.g3d.loader.G3dModelLoader;
 import com.badlogic.gdx.graphics.g3d.model.MeshPart;
 import com.badlogic.gdx.graphics.g3d.shaders.DepthShader;
@@ -19,9 +20,13 @@ import com.badlogic.gdx.graphics.glutils.FrameBuffer;
 import com.badlogic.gdx.graphics.glutils.GLVersion;
 import com.badlogic.gdx.graphics.glutils.ShaderProgram;
 import com.badlogic.gdx.math.*;
-import com.badlogic.gdx.utils.*;
+import com.badlogic.gdx.utils.Disposable;
+import com.badlogic.gdx.utils.GdxRuntimeException;
+import com.badlogic.gdx.utils.JsonReader;
+import com.badlogic.gdx.utils.ScreenUtils;
 import com.google.common.base.Preconditions;
 import com.google.errorprone.annotations.CanIgnoreReturnValue;
+import com.google.errorprone.annotations.RestrictedApi;
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 import com.ultreon.craft.*;
@@ -34,7 +39,6 @@ import com.ultreon.craft.client.config.GameSettings;
 import com.ultreon.craft.client.config.UltracraftClientConfig;
 import com.ultreon.craft.client.events.ClientLifecycleEvents;
 import com.ultreon.craft.client.events.GuiEvents;
-import com.ultreon.craft.client.events.ScreenEvents;
 import com.ultreon.craft.client.font.Font;
 import com.ultreon.craft.client.gui.*;
 import com.ultreon.craft.client.gui.debug.*;
@@ -47,6 +51,7 @@ import com.ultreon.craft.client.init.ShaderPrograms;
 import com.ultreon.craft.client.init.Shaders;
 import com.ultreon.craft.client.input.*;
 import com.ultreon.craft.client.item.ItemRenderer;
+import com.ultreon.craft.client.model.JsonModelLoader;
 import com.ultreon.craft.client.model.block.*;
 import com.ultreon.craft.client.model.entity.EntityModel;
 import com.ultreon.craft.client.model.entity.renderer.EntityRenderer;
@@ -57,14 +62,13 @@ import com.ultreon.craft.client.network.LoginClientPacketHandlerImpl;
 import com.ultreon.craft.client.player.ClientPlayer;
 import com.ultreon.craft.client.player.LocalPlayer;
 import com.ultreon.craft.client.registry.*;
-import com.ultreon.craft.client.render.FlatFoliageRenderer;
 import com.ultreon.craft.client.render.RenderType;
 import com.ultreon.craft.client.render.pipeline.CollectNode;
 import com.ultreon.craft.client.render.pipeline.MainRenderNode;
 import com.ultreon.craft.client.render.pipeline.RenderPipeline;
 import com.ultreon.craft.client.render.pipeline.WorldDiffuseNode;
 import com.ultreon.craft.client.render.shader.GameShaderProvider;
-import com.ultreon.craft.client.resources.ResourceFileHandle;
+import com.ultreon.craft.client.resources.ResourceLoader;
 import com.ultreon.craft.client.resources.ResourceNotFoundException;
 import com.ultreon.craft.client.rpc.GameActivity;
 import com.ultreon.craft.client.rpc.RpcHandler;
@@ -105,6 +109,7 @@ import com.ultreon.craft.registry.Registry;
 import com.ultreon.craft.registry.event.RegistryEvents;
 import com.ultreon.craft.resources.ResourceManager;
 import com.ultreon.craft.server.UltracraftServer;
+import com.ultreon.craft.sound.event.SoundEvents;
 import com.ultreon.craft.text.LanguageBootstrap;
 import com.ultreon.craft.text.TextObject;
 import com.ultreon.craft.util.*;
@@ -115,7 +120,6 @@ import com.ultreon.libs.commons.v0.vector.Vec2f;
 import com.ultreon.libs.commons.v0.vector.Vec2i;
 import com.ultreon.libs.commons.v0.vector.Vec3i;
 import com.ultreon.libs.datetime.v0.Duration;
-import com.ultreon.craft.util.Env;
 import com.ultreon.xeox.loader.JSEvents;
 import com.ultreon.xeox.loader.XeoxEvents;
 import com.ultreon.xeox.loader.XeoxLoader;
@@ -131,24 +135,22 @@ import org.slf4j.LoggerFactory;
 import org.slf4j.MarkerFactory;
 import space.earlygrey.shapedrawer.ShapeDrawer;
 
-import java.io.Closeable;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.net.SocketAddress;
 import java.nio.file.Path;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Queue;
 import java.util.*;
 import java.util.concurrent.*;
 import java.util.stream.Collectors;
-import java.util.zip.Deflater;
 
 import static com.badlogic.gdx.graphics.GL20.*;
 import static com.badlogic.gdx.math.MathUtils.ceil;
 
 @SuppressWarnings("UnusedReturnValue")
 public class UltracraftClient extends PollingExecutorService implements DeferredDisposable {
+    @SuppressWarnings("removal")
     @Deprecated(since = "0.1.0", forRemoval = true)
     public static final String NAMESPACE = UltracraftServer.NAMESPACE;
     public static final Logger LOGGER = LoggerFactory.getLogger("UltracraftClient");
@@ -157,22 +159,23 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     public static final float FROM_ZOOM = 2.0f;
     public static final float TO_ZOOM = 1.3f;
     private static final float DURATION = 6000f;
-    private static final float DEFAULT_SCALE = 2.0f;
     private static final int MINIMUM_WIDTH = 400;
     private static final int MINIMUM_HEIGHT = 300;
     private static final int MINIMUM_MOBILE_WIDTH = 300;
     private static final int MINIMUM_MOBILE_HEIGHT = 200;
     public static ArgParser arguments;
+    private static boolean crashing;
     private final Cursor normalCursor;
     private final Cursor clickCursor;
     private final RenderPipeline pipeline;
     private final boolean devWorld;
+    public final Renderer renderer;
     public Connection connection;
     public ClientConnection clientConn;
     public ServerData serverData;
     public ExecutorService chunkLoadingExecutor = Executors.newFixedThreadPool(Math.max(Runtime.getRuntime().availableProcessors() / 3, 1));
     public static Profiler PROFILER = new Profiler();
-    public final InspectionRoot<UltracraftClient> inspection = new InspectionRoot<>(this);
+    public final InspectionRoot<UltracraftClient> inspection;
     public UcConfiguration<UltracraftClientConfig> config;
     public boolean hideHud = false;
 
@@ -218,7 +221,8 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     private boolean isDevMode;
     @Nullable
     public Screen screen;
-    public GameSettings settings;
+    @Deprecated
+    public GameSettings settings = new GameSettings();
     public final ShapeDrawer shapes;
     private final TextureManager textureManager;
     private final ResourceManager resourceManager;
@@ -229,7 +233,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     private Vec3i breaking;
     @Nullable
     private Block breakingBlock;
-    public boolean showDebugHud = false;
+    public boolean showDebugHud = GamePlatform.get().isMobile();
 
     // Public Flags
     public boolean renderWorld = false;
@@ -259,7 +263,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     private int oldSelected;
     private final List<Disposable> disposables = new CopyOnWriteArrayList<>();
     private final List<Shutdownable> shutdownables = new CopyOnWriteArrayList<>();
-    private final List<Closeable> closeables = new CopyOnWriteArrayList<>();
+    private final List<AutoCloseable> closeables = new CopyOnWriteArrayList<>();
     private boolean loading = true;
     private final Thread mainThread;
     public HitResult cursor;
@@ -296,13 +300,41 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     private boolean autoScale = true;
     @Nullable
     public TouchPoint motionPointer;
+    private boolean disposed;
+    private final ApplicationFrame frame;
+
+    @ApiStatus.Experimental
+    private static Callback<CrashLog> crashHook;
+    private final List<CrashLog> crashes = new CopyOnWriteArrayList<>();
+    private long screenshotFlashTime;
+    private ClientSound screenshotSound;
+    private final Color tmpColor = new Color();
 
     UltracraftClient(String[] argv) {
         super(UltracraftClient.PROFILER);
+
+        Runtime.getRuntime().addShutdownHook(new Thread(() -> {
+            try {
+                if (this.integratedServer != null) {
+                    this.integratedServer.shutdown();
+                }
+            } catch (Exception e) {
+                UltracraftClient.LOGGER.error("Failed to shutdown server", e);
+            }
+
+            UltracraftClient.LOGGER.info("Shutting down game!");
+            Gdx.app.postRunnable(Gdx.app::exit);
+
+            UltracraftClient.instance = null;
+        }));
+
         UltracraftClient.LOGGER.info("Booting game!");
         UltracraftClient.instance = this;
 
+        this.unifont = deferDispose(new BitmapFont(Gdx.files.internal("assets/ultracraft/font/unifont/unifont.fnt"), true));
         this.font = new Font(new BitmapFont(Gdx.files.internal("assets/ultracraft/font/dogica/dogicapixel.fnt"), true));
+
+        LanguageBootstrap.bootstrap.set(Language::translate);
 
         XeoxEvents.INIT_BINDINGS.listen(scope -> {
             scope.put("client", scope, this);
@@ -310,16 +342,19 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
         Gdx.input.setCatchKey(Input.Keys.BACK, true);
 
-        LanguageBootstrap.bootstrap.set(Language::translate);
-
         ShaderProgram.pedantic = false;
 
         RpcHandler.HANDLERS.forEach(RpcHandler::start);
+        this.frame = GamePlatform.get().createFrame();
+
+        this.inspection = deferDispose(new InspectionRoot<>(this));
 
         this.resourceManager = new ResourceManager("assets");
         this.textureManager = new TextureManager(this.resourceManager);
 
         this.resourceManager.importDeferredPackage(this.getClass());
+
+        ResourceLoader.init(this);
 
         this.config = new UcConfiguration<>("ultracraft-client", Env.CLIENT, new UltracraftClientConfig());
         this.config.event.listen(this::onReloadConfig);
@@ -342,27 +377,27 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         this.camera.near = 0.1f;
         this.camera.far = 2;
 
-        this.pipeline = new RenderPipeline(new MainRenderNode(), this.camera)
+        this.pipeline = deferDispose(new RenderPipeline(new MainRenderNode(), this.camera)
                 .node(new CollectNode())
                 .node(new WorldDiffuseNode())
-                .node(new MainRenderNode())
-        ;
+                .node(new MainRenderNode()));
 
         // White pixel for the shape drawer.
-        Pixmap pixmap = new Pixmap(1, 1, Pixmap.Format.RGBA8888);
+        Pixmap pixmap = deferDispose(new Pixmap(1, 1, Pixmap.Format.RGBA8888));
         pixmap.setColor(1F, 1F, 1F, 1F);
         pixmap.drawPixel(0, 0);
         TextureRegion white = new TextureRegion(new Texture(pixmap));
 
-        this.spriteBatch = new SpriteBatch();
+        this.spriteBatch = deferDispose(new SpriteBatch());
         this.shapes = new ShapeDrawer(this.spriteBatch, white);
+        this.renderer = new Renderer(this.shapes);
 
         DepthShader.Config shaderConfig = new DepthShader.Config();
         shaderConfig.defaultCullFace = GL_BACK;
         shaderConfig.defaultDepthFunc = GL_DEPTH_FUNC;
-        this.modelBatch = new ModelBatch(new GameShaderProvider(shaderConfig));
+        this.modelBatch = deferDispose(new ModelBatch(new GameShaderProvider(shaderConfig)));
 
-        this.gameRenderer = new GameRenderer(this, this.modelBatch, this.spriteBatch, this.pipeline);
+        this.gameRenderer = new GameRenderer(this, this.modelBatch, this.pipeline);
 
         // Textures
         this.ultreonBgTex = new Texture("assets/ultracraft/textures/gui/loading_overlay_bg.png");
@@ -377,9 +412,10 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
         LanguageManager.setCurrentLanguage(new Locale("en", "us"));
 
-        Gdx.graphics.setCursor(this.normalCursor);
+        this.setupMods();
 
-        if (DebugFlags.INSPECTION_ENABLED) {
+        Gdx.graphics.setCursor(this.normalCursor);
+        if (DebugFlags.INSPECTION_ENABLED.enabled()) {
             InspectionNode<Application> libGdxNode = this.inspection.createNode("libGdx", value -> Gdx.app);
             InspectionNode<Graphics> graphicsNode = libGdxNode.createNode("graphics", Application::getGraphics);
             graphicsNode.create("backBufferScale", Graphics::getBackBufferScale);
@@ -402,10 +438,20 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         }
     }
 
-    private static Texture loadEntityTex(String fileName) {
-        FileHandle handle = UltracraftClient.resource(ElementID.parse(fileName).mapPath(path -> "textures/" + path));
-        Pixmap pixmap = new Pixmap(handle);
-        return new Texture(pixmap);
+    /**
+     * Game crash hook, which will be called when a crash occurs.
+     * <p>
+     * <p style="font-size: 16px"><b>ONLY USE THIS IF YOU KNOW WHAT YOU ARE DOING</b></p>
+     * <p>WHEN THIS IS NON-NULL CRASHES WILL BE CAPTURED AND WILL STOP THE GAME FROM HANDLING THEM.</p>
+     * <p>So, make sure to actually handle the crash when using this.</p>
+     */
+    @RestrictedApi(
+            explanation = "Only use this if you know what you are doing",
+            link = "https://github.com/Ultreon/ultracraft/wiki/Crash-Hooks#important",
+            allowlistAnnotations = OptIn.class
+    )
+    public static void setCrashHook(Callback<CrashLog> crashHook) {
+        UltracraftClient.crashHook = crashHook;
     }
 
     @Deprecated(since = "0.1.0", forRemoval = true)
@@ -415,23 +461,86 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
     private void onReloadConfig() {
         UltracraftClientConfig config = this.config.get();
-        if (config.fullscreen) {
-            Gdx.graphics.setFullscreenMode(Gdx.graphics.getDisplayMode());
+        boolean changed = false;
+        if (config.video == null) {
+            config.video = new UltracraftClientConfig.VideoConfig();
+            changed = true;
         }
-        String[] split = config.language.split("_");
+        if (config.privacy == null) {
+            config.privacy = new UltracraftClientConfig.PrivacyConfig();
+            changed = true;
+        }
+        if (config.accessibility == null) {
+            config.accessibility = new UltracraftClientConfig.AccessibilityConfig();
+            changed = true;
+        }
+        if (config.language == null) {
+            config.language = UltracraftClient.id("en_us");
+            changed = true;
+        }
+        if (config.personalisation == null) {
+            config.personalisation = new UltracraftClientConfig.PersonalisationConfig();
+            changed = true;
+        }
+        if (config.crafting == null) {
+            config.crafting = new UltracraftClientConfig.CraftingConfig();
+            changed = true;
+        }
+        if (changed) {
+            this.config.set(new UltracraftClientConfig());
+            this.config.save();
+        }
+
+        if (config.video.fullscreen) Gdx.graphics.setFullscreenMode(Gdx.graphics.getDisplayMode());
+
+        String[] split = config.language.path().split("_");
         if (split.length == 2) {
             LanguageManager.setCurrentLanguage(new Locale(split[0], split[1]));
         } else {
             UltracraftClient.LOGGER.error("Invalid language: {}", config.language);
             LanguageManager.setCurrentLanguage(new Locale("en", "us"));
-            config.language = "en_us";
+            config.language = UltracraftClient.id("en_us");
             this.config.save();
         }
+
+        if (config.video.guiScale != 0) {
+            this.setAutomaticScale(false);
+            this.setGuiScale(config.video.guiScale);
+        } else {
+            this.setAutomaticScale(true);
+        }
+
+        if (config.privacy.hideRpc) {
+            RpcHandler.disable();
+        } else {
+            RpcHandler.enable();
+            if (this.activity != null) {
+                this.setActivity(this.activity);
+                RpcHandler.newActivity(this.activity);
+            }
+        }
+
+        if (!config.accessibility.vibration) {
+            GameInput.cancelVibration();
+        }
+
+        UltracraftClient.invoke(() -> {
+            boolean enableVsync = config.video.enableVsync;
+            Gdx.graphics.setVSync(enableVsync);
+
+            int fpsLimit = config.video.fpsLimit;
+            if (fpsLimit >= 240) UltracraftClient.setFpsLimit(Integer.MAX_VALUE);
+            else UltracraftClient.setFpsLimit(fpsLimit < 10 ? 60 : fpsLimit);
+        });
+    }
+
+    public static void setFpsLimit(int limit) {
+        Gdx.graphics.setForegroundFPS(limit);
     }
 
     private void registerAutoFillers() {
         InspectionRoot.registerAutoFill(ClientChunk.class, node -> {
-            node.createNode("mesh", value -> value.mesh);
+            node.createNode("mesh", value -> value.solidMesh);
             node.createNode("transparentMesh", value -> value.transparentMesh);
             node.createNode("dirty", value -> value.shouldUpdate);
             node.createNode("renderOffset", value -> value.renderOffset);
@@ -573,8 +682,6 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         UltracraftClient.createDir("game-crashes/");
         UltracraftClient.createDir("logs/");
 
-        this.setupMods();
-
         JSEvents.register("setBlock");
         JSEvents.register("enable");
         JSEvents.register("disable");
@@ -599,8 +706,8 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
         this.settings = new GameSettings();
         this.settings.reload();
-        this.settings.reloadLanguage();
-        Integer scale = this.settings.guiScale.get();
+
+        int scale = this.config.get().video.guiScale;
         if (scale == 0) {
             this.setAutomaticScale(true);
         }
@@ -618,10 +725,8 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         UltracraftClient.LOGGER.info("Generating bitmap fonts");
         var resource = this.resourceManager.getResource(UltracraftClient.id("texts/unicode.txt"));
         if (resource == null) {
-            throw new ApplicationCrash(new CrashLog("Where are my sumbols", new ResourceNotFoundException(UltracraftClient.id("texts/unicode.txt"))));
+            throw new ApplicationCrash(new CrashLog("Where are my symbols", new ResourceNotFoundException(UltracraftClient.id("texts/unicode.txt"))));
         }
-
-        this.unifont = UltracraftClient.invokeAndWait(() -> new BitmapFont(Gdx.files.internal("assets/ultracraft/font/unifont/unifont.fnt"), true));
 
         this.crashOverlay = new ManualCrashOverlay(this);
 
@@ -632,7 +737,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         //----------------------
         UltracraftClient.LOGGER.info("Initializing rendering stuffs");
         UltracraftClient.invokeAndWait(() -> {
-            this.input = this.createInput();
+            this.input = deferDispose(this.createInput());
             LOGGER.info("Input class is: {}", this.input.getClass().getName());
         });
         Gdx.input.setInputProcessor(this.input);
@@ -656,10 +761,6 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         LoadingContext.withinContext(new LoadingContext(CommonConstants.NAMESPACE), () -> {
             Registries.nopInit();
             RegistryEvents.REGISTRY_CREATION.factory().onRegistryCreation();
-
-            for (var reg : Registry.getRegistries()) {
-                Registries.REGISTRY.register(reg.id(), reg);
-            }
 
             if (DebugFlags.DUMP_REGISTRIES) {
                 Registry.setDumpLogger((level, message, t) -> {
@@ -700,7 +801,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         }
 
         JSEvents.emitAll("postRegister");
-        
+
         Registry.freeze();
 
         for (Biome biome : Registries.BIOME.values()) {
@@ -722,13 +823,19 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
         this.loadingOverlay.setProgress(0.98F);
 
-        this.itemRenderer = UltracraftClient.invokeAndWait(() -> new ItemRenderer(this));
+        JsonModelLoader jsonModelLoader = new JsonModelLoader(this.resourceManager);
 
+        BlockModelRegistry.load(jsonModelLoader);
         UltracraftClient.LOGGER.info("Initializing sounds");
         this.soundRegistry.registerSounds();
 
         UltracraftClient.LOGGER.info("Baking models");
+        BlockModelRegistry.bakeJsonModels(this);
         this.bakedBlockModels = BlockModelRegistry.bake(this.blocksTextureAtlas);
+
+        this.itemRenderer = UltracraftClient.invokeAndWait(() -> new ItemRenderer(this));
+        this.itemRenderer.registerModels(jsonModelLoader);
+        this.itemRenderer.loadModels(this);
 
         if (this.deferredWidth != null && this.deferredHeight != null) {
             this.camera.viewportWidth = this.deferredWidth;
@@ -842,7 +949,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
      * client thread.
      *
      * @param func the Callable task to be executed
-     * @param <T> the type of result returned by the Callable task
+     * @param <T>  the type of result returned by the Callable task
      * @return the result returned by the Callable task
      */
     @CanIgnoreReturnValue
@@ -876,7 +983,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
      * Invokes the given callable function asynchronously and returns a {@link CompletableFuture}.
      *
      * @param func the callable function to be invoked
-     * @param <T> the type parameter of the callable function's return value
+     * @param <T>  the type parameter of the callable function's return value
      * @return a CompletableFuture representing the pending result of the callable function
      */
     @CanIgnoreReturnValue
@@ -892,7 +999,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
      */
     @NewInstance
     public static @NotNull FileHandle resource(ElementID id) {
-        return new ResourceFileHandle(id);
+        return Gdx.files.internal("assets/" + id.namespace() + "/" + id.path());
     }
 
     private static void uncaughtException(Thread t, Throwable e) {
@@ -929,12 +1036,21 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
      */
     @Override
     public <T extends Disposable> T deferDispose(T disposable) {
+        if (disposable == null) return null;
+        if (UltracraftClient.instance.disposables.contains(disposable)) return disposable;
+
+        if (UltracraftClient.instance.disposed) {
+            UltracraftClient.LOGGER.warn("UltracraftClient already disposed, immediately disposing {}", disposable.getClass().getName());
+            disposable.dispose();
+            return disposable;
+        }
+
         UltracraftClient.instance.disposables.add(disposable);
         return disposable;
     }
 
     /**
-     * Delayes shutting down of a shutdownable.
+     * Delays shutting down of a shutdownable.
      * This method shuts down the given shutdownable when the game is shutdown
      *
      * @param shutdownable the shutdownable to delay shutdown.
@@ -947,14 +1063,14 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     /**
-     * Delays closing of a closeable.
+     * Delays closing of a "closeable".
      * This method closes the given closeable when the game is shutdown.
      *
      * @param closeable the closeable to delay closing.
      * @param <T>       the type of the closeable.
      * @return the same closeable.
      */
-    public <T extends Closeable> T deferClose(T closeable) {
+    public <T extends AutoCloseable> T deferClose(T closeable) {
         UltracraftClient.instance.closeables.add(closeable);
         return closeable;
     }
@@ -975,9 +1091,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
      */
     public void delayCrash(CrashLog crashLog) {
         final var finalCrash = new CrashLog("An error occurred", crashLog, new RuntimeException("Delayed crash"));
-        Gdx.app.postRunnable(() -> {
-            UltracraftClient.crash(finalCrash);
-        });
+        Gdx.app.postRunnable(() -> UltracraftClient.crash(finalCrash));
     }
 
     /**
@@ -999,6 +1113,9 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         return new ElementID(CommonConstants.NAMESPACE, path);
     }
 
+    /**
+     * GG bro!
+     */
     public static GG ggBro() {
         return new GG();
     }
@@ -1027,7 +1144,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     private void stitchTextures() {
-        this.blocksTextureAtlas = BlockModelRegistry.stitch(this.textureManager);
+        this.blocksTextureAtlas = deferDispose(BlockModelRegistry.stitch(this.textureManager));
 
         TextureStitcher itemTextures = new TextureStitcher(UltracraftClient.id("item"));
         for (Map.Entry<ElementID, Item> e : Registries.ITEM.entries()) {
@@ -1042,6 +1159,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
     private void registerRendering() {
         this.registerBlockModels();
+        this.registerBlockEntityModels();
         this.registerEntityModels();
         this.registerEntityRenderers();
         this.registerBlockRenderers();
@@ -1049,34 +1167,63 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
         for (var e : Registries.ENTITY_TYPE.entries()) {
             EntityType<?> type = e.getValue();
-            @SuppressWarnings("unchecked") EntityRenderer<EntityModel<?>, ?> renderer = (EntityRenderer<EntityModel<?>, ?>) RendererRegistry.get(type);
+            EntityRenderer<?> renderer = RendererRegistry.get(type);
             EntityModel<?> entityModel = ModelRegistry.get(type);
 
             FileHandle handle = UltracraftClient.resource(e.getKey().mapPath(path -> "models/entity/" + path + ".g3dj"));
             if (handle.exists()) {
-                Model model = UltracraftClient.invokeAndWait(() -> this.modelLoader.loadModel(handle, UltracraftClient::loadEntityTex));
-                model.materials.forEach(modelModel -> modelModel.set(new BlendingAttribute(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA)));
+                Model model = UltracraftClient.invokeAndWait(() -> this.modelLoader.loadModel(handle, fileName -> {
+                    String filePath = fileName.substring(("assets/" + e.getKey().namespace() + "/models/entity/").length());
+                    return new Texture(UltracraftClient.resource(e.getKey().mapPath(path -> "textures/entity/" + filePath)));
+                }));
+                if (model == null)
+                    throw new RuntimeException("Failed to load entity model: " + e.getKey().mapPath(path -> "models/entity/" + path + ".g3dj"));
+                model.materials.forEach(modelModel -> {
+                    modelModel.set(new BlendingAttribute(GL_SRC_ALPHA, GL_ONE_MINUS_SRC_ALPHA));
+                    modelModel.set(FloatAttribute.createAlphaTest(0.5f));
+                });
                 ModelRegistry.registerFinished(type, model);
             } else {
+                if (entityModel == null) {
+                    LOGGER.warn("Model not found for entity {}", type.getId());
+                    continue;
+                }
+
+                if (renderer == null) {
+                    LOGGER.warn("Renderer not found for entity {}", type.getId());
+                    continue;
+                }
+
                 ModelRegistry.registerFinished(type, entityModel.finish(renderer.getTextures()));
             }
         }
+
+        RendererRegistry.load();
+    }
+
+    private void registerBlockEntityModels() {
+        ClientLifecycleEvents.REGISTER_BLOCK_ENTITY_MODELS.factory().onRegister();
+
+        BlockEntityModelRegistry.load(this);
     }
 
     private void registerBlockRenderTypes() {
         BlockRenderTypeRegistry.register(Blocks.WATER, RenderType.WATER);
 
-        ClientLifecycleEvents.REGiSTER_BLOCK_RENDER_TYPES.factory().onRegisterBlockRenderTypes();
+        ClientLifecycleEvents.REGISTER_BLOCK_RENDER_TYPES.factory().onRegister();
     }
 
     private void registerBlockRenderers() {
-        BlockRendererRegistry.register(Blocks.TALL_GRASS, new FlatFoliageRenderer());
+        ClientLifecycleEvents.REGISTER_BLOCK_RENDERERS.factory().onRegister();
     }
 
     private void registerBlockModels() {
         BlockModelRegistry.register(Blocks.GRASS_BLOCK, CubeModel.of(UltracraftClient.id("blocks/grass_top"), UltracraftClient.id("blocks/dirt"), UltracraftClient.id("blocks/grass_side"), ModelProperties.builder().top(FaceProperties.builder().randomRotation().build()).build()));
         BlockModelRegistry.register(Blocks.LOG, CubeModel.of(UltracraftClient.id("blocks/log"), UltracraftClient.id("blocks/log"), UltracraftClient.id("blocks/log_side"), ModelProperties.builder().top(FaceProperties.builder().randomRotation().build()).build()));
         BlockModelRegistry.register(Blocks.CRAFTING_BENCH, CubeModel.of(UltracraftClient.id("blocks/crafting_bench_top"), UltracraftClient.id("blocks/crafting_bench_bottom"), UltracraftClient.id("blocks/crafting_bench_side"), ModelProperties.builder().top(FaceProperties.builder().randomRotation().build()).build()));
+
+        ClientLifecycleEvents.REGISTER_BLOCK_MODELS.factory().onRegister();
+
         BlockModelRegistry.registerDefault(Blocks.VOIDGUARD);
         BlockModelRegistry.registerDefault(Blocks.ERROR);
         BlockModelRegistry.registerDefault(Blocks.DIRT);
@@ -1092,13 +1239,13 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     private void registerEntityModels() {
-        ClientLifecycleEvents.REGISTER_MODELS.factory().onRegisterModels();
+        ClientLifecycleEvents.REGISTER_MODELS.factory().onRegister();
     }
 
     private void registerEntityRenderers() {
-        RendererRegistry.register(EntityTypes.PLAYER, new PlayerRenderer(null));
+        RendererRegistry.register(EntityTypes.PLAYER, PlayerRenderer::new);
 
-        ClientLifecycleEvents.REGISTER_ENTITY_RENDERERS.factory().onRegisterEntityRenderers();
+        ClientLifecycleEvents.REGISTER_ENTITY_RENDERERS.factory().onRegister();
     }
 
     private GameInput createInput() {
@@ -1151,12 +1298,17 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
      */
     @CanIgnoreReturnValue
     public boolean showScreen(@Nullable Screen next) {
+        if (!isOnMainThread()) {
+            @Nullable Screen finalNext = next;
+            return invokeAndWait(() -> this.showScreen(finalNext));
+        }
+
         var cur = this.screen;
         if (next == null && this.world == null)
             next = new TitleScreen();
 
         if (next == null)
-            return cur == null || this.openScreen(cur);
+            return cur == null || this.closeScreen(cur);
 
         // Call open event.
         var openResult = GuiEvents.OPEN.factory().onOpenScreen(next);
@@ -1166,31 +1318,16 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         if (openResult.isInterrupted())
             next = openResult.getValue();
 
-        if (this.shouldInitNext(next, cur))
-            return false;
+        if (cur != null && this.closeScreen(next, cur))
+            return false; // Close was canceled
+        if (next == null)
+            return false; // The next screen is null, canceling.
 
-        this.initScreen(next);
-        return true;
-    }
-
-    private boolean shouldInitNext(@Nullable Screen next, Screen cur) {
-        if (cur != null && this.closeScreen(next, cur)) {
-            return true; // Close was canceled
-        } else {
-            if (next == null) return true;
-
-            DesktopInput.setCursorCaught(false);
-        }
-        return false;
-    }
-
-    private void initScreen(@Nullable Screen next) {
         this.screen = next;
-
-        if (this.screen == null)
-            return;
-
         this.screen.init(this.getScaledWidth(), this.getScaledHeight());
+        DesktopInput.setCursorCaught(false);
+
+        return true;
     }
 
     private boolean closeScreen(@Nullable Screen next, Screen cur) {
@@ -1202,7 +1339,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         return false;
     }
 
-    private boolean openScreen(Screen cur) {
+    private boolean closeScreen(Screen cur) {
         if (this.closeScreen(null, cur)) return false;
         this.screen = null;
         DesktopInput.setCursorCaught(true);
@@ -1218,19 +1355,25 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         return a + (b - a) * d;
     }
 
+    /**
+     * Renders the game.
+     * <p>NOTE: This method should not be called.
+     * This is invoked by libGDX.</p>
+     */
     public void render() {
         float deltaTime = Gdx.graphics.getDeltaTime();
 
         try {
             UltracraftClient.PROFILER.update();
 
-            if (this.debugGui != null && this.showDebugHud) {
+            if (this.debugGui != null && this.showDebugHud && !this.loading) {
                 this.debugGui.updateProfiler();
             }
 
             UltracraftClient.PROFILER.section("render", () -> this.doRender(deltaTime));
+            this.renderer.actuallyEnd();
         } catch (OutOfMemoryError e) {
-            System.gc();
+            System.gc(); // try to free up some memory before handling out of memory.
             try {
                 this.integratedServer.shutdownNow();
                 this.integratedServer = null;
@@ -1258,11 +1401,16 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         if (this.width == 0 || this.height == 0) return;
         if (this.triggerScreenshot) this.prepareScreenshot();
 
-        Renderer renderer = new Renderer(this.shapes);
-
         UltracraftClient.PROFILER.section("renderGame", () -> this.renderGame(renderer, deltaTime));
 
         if (this.captureScreenshot) this.handleScreenshot();
+
+        if (this.screenshotFlashTime > System.currentTimeMillis() - 200) {
+            this.renderer.begin();
+            this.shapes.filledRectangle(0, 0, this.width, this.height, this.tmpColor.set(1, 1, 1, 1 - (System.currentTimeMillis() - this.screenshotFlashTime) / 200f));
+            this.renderer.end();
+        }
+
         if (this.isCustomBorderShown()) this.drawCustomBorder(renderer);
 
         GamePlatform.get().renderImGui();
@@ -1315,12 +1463,12 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     private void drawCustomBorder(Renderer renderer) {
-        this.spriteBatch.begin();
+        this.renderer.begin();
         renderer.pushMatrix();
         renderer.scale(2, 2);
         this.renderWindow(renderer, this.getWidth() / 2, this.getHeight() / 2);
         renderer.popMatrix();
-        this.spriteBatch.end();
+        this.renderer.end();
     }
 
     private void handleScreenshot() {
@@ -1337,7 +1485,7 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     private boolean renderGame(Renderer renderer, float deltaTime) {
         if (Gdx.graphics.getFrameId() == 2) {
             UltracraftClient.firstRender();
-            Gdx.graphics.setTitle("Ultracraft %s".formatted(UltracraftClient.getGameVersion()));
+            Gdx.graphics.setTitle(String.format("Ultracraft %s", UltracraftClient.getGameVersion()));
         }
 
         this.updateActivity();
@@ -1411,24 +1559,39 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
     private void renderLoadingOverlay(Renderer renderer, float deltaTime, LoadingOverlay loading) {
         UltracraftClient.PROFILER.section("loading", () -> {
-            this.spriteBatch.begin();
+            renderer.begin();
             renderer.pushMatrix();
             renderer.translate(this.getDrawOffset().x, this.getDrawOffset().y);
             renderer.scale(this.getGuiScale(), this.getGuiScale());
             loading.render(renderer, Integer.MAX_VALUE, Integer.MAX_VALUE, deltaTime);
             renderer.popMatrix();
-            this.spriteBatch.end();
         });
     }
 
     private void startLoading() {
         this.startDevLoading = false;
 
+        UltracraftClient.setCrashHook(this.crashes::add);
+
         this.loadingOverlay = new LoadingOverlay(this.ultreonBgTex);
 
         CompletableFuture.runAsync(this::load).exceptionally(throwable -> {
-            UltracraftClient.crash(throwable);
+            // Clear the crash handling
+            UltracraftClient.crashHook = null;
+
+            this.crashes.add(new CrashLog("Failed to load", throwable));
+
+            // Show the crash screen
+            this.screen = new CrashScreen(this.crashes);
+            this.loadingOverlay = null;
             return null;
+        }).thenRun(() -> {
+            // Clear the crash handling
+            UltracraftClient.crashHook = null;
+
+            this.screen = this.crashes.isEmpty() ? new DevScreen() : new CrashScreen(this.crashes);
+            this.screen.init(this.width, this.height);
+            this.loadingOverlay = null;
         });
     }
 
@@ -1440,10 +1603,10 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
             ScreenUtils.clear(1, 1, 1, 1, true);
 
-            this.spriteBatch.begin();
+            this.renderer.begin();
             int size = Math.min(this.getWidth(), this.getHeight()) / 2;
             renderer.blit(this.libGDXLogoTex, (float) this.getWidth() / 2 - (float) size / 2, (float) this.getHeight() / 2 - (float) size / 2, size, size);
-            this.spriteBatch.end();
+            this.renderer.end();
 
             if (System.currentTimeMillis() - this.libGDXSplashTime > 4000f) {
                 this.showLibGDXSplash = false;
@@ -1472,10 +1635,10 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
             float drawX = (this.getWidth() - drawWidth) / 2;
             float drawY = (this.getHeight() - drawHeight) / 2;
 
-            this.spriteBatch.begin();
+            this.renderer.begin();
             renderer.blit(this.ultreonBgTex, 0, 0, this.getWidth(), this.getHeight(), 0, 0, 1024, 1024, 1024, 1024);
             renderer.blit(this.ultreonLogoTex, (int) drawX, (int) drawY, (int) drawWidth, (int) drawHeight, 0, 0, 1920, 1080, 1920, 1080);
-            this.spriteBatch.end();
+            this.renderer.end();
 
             if (System.currentTimeMillis() - this.ultreonSplashTime > UltracraftClient.DURATION) {
                 this.showUltreonSplash = false;
@@ -1516,10 +1679,10 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
             try {
                 this.clientTick();
             } catch (ApplicationCrash e) {
-                UltracraftClient.crash(e.getCause());
+                UltracraftClient.crash(e.getCrashLog());
             } catch (Exception t) {
                 var crashLog = new CrashLog("Game being ticked.", t);
-                UltracraftClient.crash(crashLog.createCrash());
+                UltracraftClient.crash(crashLog);
             }
         }
 
@@ -1548,16 +1711,17 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         if (this.spriteBatch.isDrawing()) this.spriteBatch.flush();
         if (this.modelBatch.getCamera() != null) this.modelBatch.flush();
 
-        byte[] pixels = ScreenUtils.getFrameBufferPixels(0, 0, this.width, this.height, false);
-        Pixmap pixmap = new Pixmap(this.width, this.height, Pixmap.Format.RGBA8888);
-        BufferUtils.copy(pixels, 0, pixmap.getPixels(), pixels.length);
+        Screenshot grabbed = Screenshot.grab(this.width, this.height);
+        FileHandle save = grabbed.save(String.format("screenshots/%s.png", DateTimeFormatter.ofPattern("MM.dd.yyyy-HH.mm.ss").format(LocalDateTime.now())));
 
+        this.screenshotFlashTime = System.currentTimeMillis();
+
+        this.playSound(SoundEvents.SCREENSHOT, 0.5f);
+
+        this.notifications.add("Screenshot taken.", save.name(), "screenshots");
         var fileHandle = UltracraftClient.data(String.format("screenshots/screenshot_%s.png", DateTimeFormatter.ofPattern("MM.dd.yyyy-HH.mm.ss").format(LocalDateTime.now())));
-        GuiEvents.SCREENSHOT_TAKEN.factory().onScreenshotTaken(pixmap, fileHandle);
-        JSEvents.emitAll("screenshotTaken", pixmap, fileHandle);
-
-        PixmapIO.writePNG(fileHandle, pixmap, Deflater.DEFAULT_COMPRESSION, true);
-        pixmap.dispose();
+        GuiEvents.SCREENSHOT_TAKEN.factory().onScreenshotTaken(grabbed, fileHandle);
+        JSEvents.emitAll("screenshotTaken", grabbed, fileHandle);
     }
 
     private static void firstRender() {
@@ -1570,23 +1734,29 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
 
     public static void crash(Throwable throwable) {
         UltracraftClient.LOGGER.error("Game crash triggered:", throwable);
-        try {
-            var crashLog = new CrashLog("An unexpected error occurred", throwable);
-            UltracraftClient.crash(crashLog);
-        } catch (Exception | OutOfMemoryError t) {
-            UltracraftClient.LOGGER.error(UltracraftClient.FATAL_ERROR_MSG, t);
-            Runtime.getRuntime().halt(1);
-        }
+        var crashLog = new CrashLog("An unexpected error occurred", throwable);
+        UltracraftClient.crash(crashLog);
     }
 
     public static void crash(CrashLog crashLog) {
         try {
+            Callback<CrashLog> handler = UltracraftClient.crashHook;
+            if (handler != null) {
+                try {
+                    handler.call(crashLog);
+                    return;
+                } catch (Exception e) {
+                    UltracraftClient.LOGGER.error("Crash hook failed", e);
+                    System.exit(3);
+                }
+            }
+
             UltracraftClient.instance.fillGameInfo(crashLog);
             var crash = crashLog.createCrash();
             UltracraftClient.crash(crash);
         } catch (Exception | OutOfMemoryError t) {
             UltracraftClient.LOGGER.error(UltracraftClient.FATAL_ERROR_MSG, t);
-            Runtime.getRuntime().halt(1);
+            System.exit(2);
         }
     }
 
@@ -1604,40 +1774,18 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     private static void crash(ApplicationCrash crash) {
-        Application app = Gdx.app;
+        if (crashing) {
+            LOGGER.error("Double crash detected, ignoring.");
+            return;
+        }
+        crashing = true;
         try {
-            if (app != null) {
-                app.postRunnable(() -> {
-                    try {
-                        UltracraftClient.cleanUp();
-                    } catch (Exception | OutOfMemoryError t) {
-                        UltracraftClient.LOGGER.error("Failed to clean up the mess:", t);
-                    }
-                });
-            }
-            crash.toString();
-
             var crashLog = crash.getCrashLog();
             CrashHandler.handleCrash(crashLog);
-            Runtime.getRuntime().halt(1);
+            Runtime.getRuntime().exit(1);
         } catch (Exception | OutOfMemoryError t) {
             UltracraftClient.LOGGER.error(UltracraftClient.FATAL_ERROR_MSG, t);
-            Runtime.getRuntime().halt(1);
-        }
-    }
-
-    private static void cleanUp() {
-        UltracraftClient client = UltracraftClient.instance;
-        if (client != null) {
-            UltracraftClient.cleanUp(client.world);
-            UltracraftClient.cleanUp(client.worldRenderer);
-            UltracraftClient.cleanUp(client.unifont);
-            UltracraftClient.cleanUp(client.modelBatch);
-            UltracraftClient.cleanUp(client.spriteBatch);
-            UltracraftClient.cleanUp(client.windowTex);
-            UltracraftClient.cleanUp(client.ultreonLogoTex);
-            UltracraftClient.cleanUp(client.ultreonBgTex);
-            UltracraftClient.cleanUp(TextureManager.DEFAULT_TEX);
+            Runtime.getRuntime().exit(2);
         }
     }
 
@@ -1663,7 +1811,17 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         }
     }
 
-    private static void cleanUp(@Nullable Closeable disposable) {
+    private static void cleanUp(@Nullable ExecutorService disposable) {
+        if (disposable == null) return;
+
+        try {
+            disposable.shutdownNow();
+        } catch (Exception throwable) {
+            Debugger.log("Failed to shut down " + disposable.getClass().getName(), throwable);
+        }
+    }
+
+    private static void cleanUp(@Nullable AutoCloseable disposable) {
         if (disposable == null) return;
 
         try {
@@ -1786,48 +1944,42 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         if (!UltracraftClient.isOnMainThread()) {
             throw new IllegalThreadError("Should only dispose on LibGDX main thread");
         }
-        try {
-            while (!this.futures.isEmpty()) {
-                this.futures.removeIf(CompletableFuture::isDone);
-            }
 
-            GameInput.cancelVibration();
+        synchronized (this) {
+            this.disposed = true;
 
-            WatchManager watchManager = UltracraftServer.getWatchManager();
+            try {
+                while (!this.futures.isEmpty()) {
+                    this.futures.removeIf(CompletableFuture::isDone);
+                }
+
+                GameInput.cancelVibration();
+
+                WatchManager watchManager = UltracraftServer.getWatchManager();
             if (watchManager != null)
                 watchManager.stop();
 
-            UltracraftClient.cleanUp(this.input);
-            UltracraftClient.cleanUp(this.integratedServer);
-            UltracraftClient.cleanUp(this.pipeline);
+                UltracraftClient.cleanUp((ExecutorService) this.integratedServer);
 
-            if (this.scheduler != null) this.scheduler.shutdownNow();
-            if (this.chunkLoadingExecutor != null) this.chunkLoadingExecutor.shutdownNow();
+                if (this.scheduler != null) this.scheduler.shutdownNow();
+                if (this.chunkLoadingExecutor != null) this.chunkLoadingExecutor.shutdownNow();
 
-            UltracraftClient.cleanUp(this.garbageCollector);
-            UltracraftClient.cleanUp(this.world);
-            UltracraftClient.cleanUp(this.worldRenderer);
-            UltracraftClient.cleanUp(this.blocksTextureAtlas);
-            UltracraftClient.cleanUp(this.inspection);
-            UltracraftClient.cleanUp(this.profiler);
+                UltracraftClient.cleanUp(this.garbageCollector);
+                UltracraftClient.cleanUp(this.world);
+                UltracraftClient.cleanUp(this.worldRenderer);
+                UltracraftClient.cleanUp(this.profiler);
 
-            GamePlatform.get().onGameDispose();
+                GamePlatform.get().onGameDispose();
 
-            UltracraftClient.cleanUp(this.modelBatch);
-            UltracraftClient.cleanUp(this.spriteBatch);
-            UltracraftClient.cleanUp(this.unifont);
+                this.disposables.forEach(UltracraftClient::cleanUp);
+                this.shutdownables.forEach(UltracraftClient::cleanUp);
+                this.closeables.forEach(UltracraftClient::cleanUp);
 
-            for (var font : ClientRegistries.FONT.values()) {
-                font.dispose();
+                ClientLifecycleEvents.GAME_DISPOSED.factory().onGameDisposed();
+            } catch (Exception t) {
+                UltracraftClient.crash(t);
+                Runtime.getRuntime().halt(2);
             }
-
-            this.disposables.forEach(UltracraftClient::cleanUp);
-            this.shutdownables.forEach(UltracraftClient::cleanUp);
-            this.closeables.forEach(UltracraftClient::cleanUp);
-
-            ClientLifecycleEvents.GAME_DISPOSED.factory().onGameDisposed();
-        } catch (Exception t) {
-            UltracraftClient.crash(t);
         }
     }
 
@@ -1868,11 +2020,11 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     public int getScaledWidth() {
-        return ceil(this.getWidth() / this.getGuiScale());
+        return ceil(Gdx.graphics.getWidth() / this.getGuiScale());
     }
 
     public int getScaledHeight() {
-        return ceil(this.getHeight() / this.getGuiScale());
+        return ceil(Gdx.graphics.getHeight() / this.getGuiScale());
     }
 
     public void exitWorldToTitle() {
@@ -2035,14 +2187,10 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
         return world.getBreakProgress(new BlockPos(breaking));
     }
 
-    private float calculateGuiScale() {
-        return UltracraftClient.DEFAULT_SCALE;
-    }
-
     private int calcMaxGuiScale() {
         var windowWidth = Gdx.graphics.getWidth();
         var windowHeight = Gdx.graphics.getHeight();
-        
+
         if (GamePlatform.get().isMobile()) {
             if (windowWidth / UltracraftClient.MINIMUM_MOBILE_WIDTH < windowHeight / UltracraftClient.MINIMUM_MOBILE_HEIGHT) {
                 return windowWidth / UltracraftClient.MINIMUM_MOBILE_WIDTH;
@@ -2142,6 +2290,8 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     public void setFullScreen(boolean fullScreen) {
+        if (!GamePlatform.get().isDesktop()) return;
+
         if (Gdx.graphics.isFullscreen() != fullScreen) {
             if (fullScreen) {
                 this.oldMode = new Vec2i(this.getWidth(), this.getHeight());
@@ -2171,8 +2321,12 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
     }
 
     public void setGuiScale(float guiScale) {
-//        this.guiScale = guiScale;
-//        this.resize(this.width, this.height);
+        if (autoScale) {
+            this.guiScale = this.calcMaxGuiScale();
+            return;
+        }
+        this.guiScale = guiScale;
+        this.resize(this.width, this.height);
     }
 
     public MultiplayerData getMultiplayerData() {
@@ -2209,6 +2363,14 @@ public class UltracraftClient extends PollingExecutorService implements Deferred
             return this.worldRenderer.getEnvironment();
         }
         return this.defaultEnv;
+    }
+
+    public RenderPipeline getPipeline() {
+        return pipeline;
+    }
+
+    public ApplicationFrame getFrame() {
+        return frame;
     }
 
     private static class LibGDXLogger implements ApplicationLogger {
