@@ -4,10 +4,10 @@ import com.badlogic.gdx.Gdx;
 import com.badlogic.gdx.Input;
 import com.badlogic.gdx.backends.lwjgl3.Lwjgl3Graphics;
 import com.ultreon.craft.client.UltracraftClient;
-import com.ultreon.craft.desktop.GuiEditor;
 import com.ultreon.craft.client.world.ClientWorld;
-import com.ultreon.craft.server.UltracraftServer;
+import com.ultreon.craft.desktop.GuiEditor;
 import com.ultreon.craft.desktop.ImGuiEx;
+import com.ultreon.craft.server.UltracraftServer;
 import com.ultreon.craft.world.ChunkPos;
 import imgui.ImGui;
 import imgui.ImGuiIO;
@@ -60,13 +60,15 @@ public class ImGuiOverlay {
     public static void setupImGui() {
         UltracraftClient.LOGGER.info("Setting up ImGui");
 
-        GLFWErrorCallback.create((error, description) -> UltracraftClient.LOGGER.error("GLFW Error: {}", description)).set();
+        UltracraftClient.get().deferClose(GLFWErrorCallback.create((error, description) -> UltracraftClient.LOGGER.error("GLFW Error: {}", description)).set());
         if (!GLFW.glfwInit()) {
             throw new IllegalStateException("Unable to initialize GLFW");
         }
-        ImGui.createContext();
-        ImGuiOverlay.imPlotCtx = ImPlot.createContext();
-        ImGuiOverlay.isContextCreated = true;
+        synchronized (ImGuiOverlay.class) {
+            ImGui.createContext();
+            ImGuiOverlay.imPlotCtx = ImPlot.createContext();
+            ImGuiOverlay.isContextCreated = true;
+        }
         final ImGuiIO io = ImGui.getIO();
         io.setIniFilename(null);
         io.getFonts().addFontDefault();
@@ -80,9 +82,11 @@ public class ImGuiOverlay {
     }
 
     public static void preInitImGui() {
-        ImGuiOverlay.imGuiGlfw = new ImGuiImplGlfw();
-        ImGuiOverlay.imGuiGl3 = new ImGuiImplGl3();
-        ImGuiOverlay.isImplCreated = true;
+        synchronized (ImGuiOverlay.class) {
+            ImGuiOverlay.imGuiGlfw = new ImGuiImplGlfw();
+            ImGuiOverlay.imGuiGl3 = new ImGuiImplGl3();
+            ImGuiOverlay.isImplCreated = true;
+        }
     }
 
     public static boolean isChunkSectionBordersShown() {
@@ -149,7 +153,7 @@ public class ImGuiOverlay {
         if (ImGuiOverlay.SHOW_GUI_UTILS.get()) ImGuiOverlay.showGuiEditor(client);
         if (ImGuiOverlay.SHOW_UTILS.get()) ImGuiOverlay.showUtils(client);
         if (ImGuiOverlay.SHOW_CHUNK_DEBUGGER.get()) ImGuiOverlay.showChunkDebugger(client);
-        if (ImGuiOverlay.SHOW_SHADER_EDITOR.get()) ImGuiOverlay.showShaderEditor(client);
+        if (ImGuiOverlay.SHOW_SHADER_EDITOR.get()) ImGuiOverlay.showShaderEditor();
     }
 
     private static void handleInput() {
@@ -206,7 +210,7 @@ public class ImGuiOverlay {
         ImGui.setNextWindowSize(400, 200, ImGuiCond.Once);
         ImGui.setNextWindowPos(ImGui.getMainViewport().getPosX() + 100, ImGui.getMainViewport().getPosY() + 100, ImGuiCond.Once);
         if (client.player != null && ImGui.begin("Chunk Debugging", ImGuiOverlay.getDefaultFlags())) {
-            if (ImGui.button("Reset chunk at %s".formatted(ImGuiOverlay.RESET_CHUNK))) {
+            if (ImGui.button(String.format("Reset chunk at %s", ImGuiOverlay.RESET_CHUNK))) {
                 CompletableFuture.runAsync(() -> {
                     ClientWorld world = client.world;
                     UltracraftClient.invokeAndWait(() -> {
@@ -221,7 +225,7 @@ public class ImGuiOverlay {
         }
     }
 
-    private static void showShaderEditor(UltracraftClient client) {
+    private static void showShaderEditor() {
         ImGui.setNextWindowSize(400, 200, ImGuiCond.Once);
         ImGui.setNextWindowPos(ImGui.getMainViewport().getPosX() + 100, ImGui.getMainViewport().getPosY() + 100, ImGuiCond.Once);
         if (ImGui.begin("Shader Editor", ImGuiOverlay.getDefaultFlags())) {
@@ -323,14 +327,16 @@ public class ImGuiOverlay {
     }
 
     public static void dispose() {
-        if (ImGuiOverlay.isImplCreated) {
-            ImGuiOverlay.imGuiGl3.dispose();
-            ImGuiOverlay.imGuiGlfw.dispose();
-        }
+        synchronized (ImGuiOverlay.class) {
+            if (ImGuiOverlay.isImplCreated) {
+                ImGuiOverlay.imGuiGl3.dispose();
+                ImGuiOverlay.imGuiGlfw.dispose();
+            }
 
-        if (ImGuiOverlay.isContextCreated) {
-            ImGui.destroyContext();
-            ImPlot.destroyContext(ImGuiOverlay.imPlotCtx);
+            if (ImGuiOverlay.isContextCreated) {
+                ImGui.destroyContext();
+                ImPlot.destroyContext(ImGuiOverlay.imPlotCtx);
+            }
         }
     }
 }
